--- a/public/uploads/editor.html
+++ b/public/uploads/editor.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog : Editor</title>
+    <title>Blog : Editorsss</title>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/editor.css">
 </head>
 <body>
     <div class="banner">
         <input type="file" accept="image/*"id="banner-upload" hidden>
-        <label for="banner-upload" class="banner-upload-btn"><img src="../img/tech7.jpg" alt=""></label>
+        <label for="banner-upload" class="banner-upload-btn"><img src="../img/tech7.jpg" alt="upload banner"></label>
     </div>
     
 </body>
