simple changes on home.html

--- a/public/uploads/home.html
+++ b/public/uploads/home.html
@@ -19,14 +19,14 @@
     <header class="header">
         <div class="content"> 
             <h1 class="heading">
-                <span class="small">Welcome inthe World of</span>
-                blog
+                <span class="small">Welcome in the World of</span>
+                blogs
                 <span class="no-fill">writing</span>
             </h1>
             <a href="/editor"class="btn">write a blog </a>
         </div>
     </header>
-    <!-- <section class="blogs-section">
+    <section class="blogs-section">
         <div class="blog-card">
             <img class="blog-image"src="../img/tech7.jpg" alt="">
             <h1 class="blog-title">Lorem ipsum dolor sit amet consectetur.</h1>
@@ -34,7 +34,7 @@
             ex odit iste animi error sed veritatis officiis.</p>
             <a href="/" class="btn dark">Readmore</a>
         </div>
-    </section> -->
+    </section>
      
 </body>
 </html>
