--- a/public/uploads/home.html
+++ b/public/uploads/home.html
@@ -31,7 +31,7 @@
             <img class="blog-image"src="../img/tech7.jpg" alt="">
             <h1 class="blog-title">Lorem ipsum dolor sit amet consectetur.</h1>
             <p class="blog-overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quos voluptatibus rerum 
-            ex odit iste animi error sed veritatis officiis.</p>
+            ex odit iste animi error sed veritatis officials.</p>
             <a href="/" class="btn dark">Readmore</a>
         </div>
     </section>
